--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,9 @@ pico_enable_stdio_usb(EmbarcaTech_Unidade4_Tarefa1 0)
 
 # Add the standard library to the build
 target_link_libraries(EmbarcaTech_Unidade4_Tarefa1
-        pico_stdlib)
+        pico_stdlib
+        hardware_pwm 
+        hardware_clocks)
 
 # Add the standard include files to the build
 target_include_directories(EmbarcaTech_Unidade4_Tarefa1 PRIVATE
